Cria primeiro endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,17 +1,20 @@
 service: cadastro-pacientes
 
-frameworkVersion: '2'
+frameworkVersion: "2"
 
 provider:
   name: aws
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
 
-# you can overwrite defaults here
+  # you can overwrite defaults here
   stage: dev
   region: us-east-2
-
 
 functions:
   listarPacientes:
     handler: handler.listarPacientes
+    events:
+      - http:
+          path: pacientes
+          method: get
