--- a/serverless.yml
+++ b/serverless.yml
@@ -18,3 +18,9 @@ functions:
       - http:
           path: pacientes
           method: get
+  obterPaciente:
+    handler: handler.obterPaciente
+    events:
+      - http:
+          path: pacientes/{pacienteId}
+          method: get        
