--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,15 @@ provider:
   # you can overwrite defaults here
   stage: dev
   region: us-east-2
+  iamRoleStatements:
+  - Effect: Allow
+    Action:
+      - dynamodb:Query
+      - dynamodb:Scan
+      - dynamodb:PutItem
+      - dynamodb:DeleteItem
+      - dynamodb:GetItem
+    Resource: arn:aws:dynamodb:us-east-2:081384963822:table/PACIENTES
 
 functions:
   listarPacientes:
@@ -27,4 +36,26 @@ functions:
     events:
       - http:
           path: pacientes/{pacienteId}
-          method: get        
+          method: get       
+  cadastrarPaciente:
+    handler: handler.cadastrarPaciente
+    events:
+      - http:
+          path: pacientes
+          method: post      
+
+resources:
+  Resources:
+    PacientesTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: PACIENTES
+        AttributeDefinitions:
+          - AttributeName: paciente_id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: paciente_id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
